--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
 	"bugs": {
 		"url": "https://github.com/judith-sanchez/color-flux-wizard/issues"
 	},
-	"homepage": "https://github.com/judith-sanchez/color-flux-wizard#readme"
+	"homepage": "https://github.com/judith-sanchez/color-flux-wizard#readme",
+	"bin": {
+		"color-flux-wizard": "./bin/global.js"
+	},
+	"preferGlobal": true
 }
